Made body full width so that only game container scroll

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,7 @@
 }
 
 body {
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,5 +31,4 @@ body {
 
 #app {
   overflow: hidden;
-  margin: auto;
 }
